--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,11 @@ name: Ender_party
 version: '0.1'
 main: org.ven.mrg.ender_party.Ender_party
 api-version: '1.21'
+commands:
+  vensoly7-april-joke:
+    description: "Command to menage joke plg!"
+    aliases:
+      - joke
+      - v7-joke
+      - v7j
+    usage: /v7j [action] <arguments>
