--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,9 @@ name: Ender_party
 version: '0.1'
 main: org.ven.mrg.ender_party.Ender_party
 api-version: '1.21'
+
+softdepend: [NBTAPI]
+
 commands:
   vensoly7-april-joke:
     description: "Command to menage joke plg!"
