--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,11 +1,11 @@
 # to enable spawning need restart
-enabled: false
+enabled: true
 log-type: 1
 
 # period to spawn 1 clown (seconds)
 spawn-clown-timer:
-  min: 180
-  max: 600
+  min: 50
+  max: 100
 
 
 
